2010-06-08  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control, DEBIAN/make_deb_package.sh,
	  pandora_server.spec, lib/PandoraFMS/Config.pm: Updated version
	  strings.

2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/postinst: fixed when the package DEB no have previus conf file.
	
	* DEBIAN/make_deb_package.sh: cleaned source code.

2010-06-04  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec: Fixed the %postun target.

2010-06-04  Ramon Novoa  <rnovoa@artica.es>

	* pandora_console.spec: Fixed. Upgrading an RPM broke the installation.

2010-06-01  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/prerm: disabled the delete conf file.

2010-06-01  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm: Set default values to avoid warnings.
	  Fixes bug #3009858.

2010-05-31  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed the help and the
	error and successful messages

2010-05-31  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Clean code and change
	the enable/disable groups functionalities. Now 
	the parameter is the name of the group.

2010-05-31  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Set the initial depth for
	  pandora_inhibit_alerts. Fixes bug #3008761.

2010-05-31  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed typo error.

2010-05-27  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added the 15 new functionalities
	to CLI

2010-05-26  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added a function to get the id of a user
	  profile (needed by pandora_manage.pl).

2010-05-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Added a function to get the id of an action
	  (needed by pandora_manage.pl).

2010-05-25  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Set a default verbosity level for logger().

2010-05-25  Ramon Novoa  <rnovoa@artica.es>
